tests/script_errors/lexer_invalid_hex/error.txt
Error: 
    1 | let invalid = 0x;
      |               ^^^ An invalid hexadecimal